@@ -8,7 +8,7 @@
 #
 # Coding language: C
 # Compiler: gcc
-# OS: Redhat Linux
+# OS: Redhat Linux, Mac OS X
 #
 ################################################################
 
@@ -16,15 +16,15 @@ MAKE = make
 GZIP = gzip -S .gz
 
 #### Environment Variable Definitions ####
-OS = redhat
-PREFIX = /home/labrie/prgc
+OS = macosx
+PREFIX = /Users/klabrie/prgc
 INCLDIR = $(PREFIX)/include
 LIBDIR = $(PREFIX)/lib
 
 EPREFIX = $(PREFIX)
 LPREFIX = $(PREFIX)
 IPREFIX = $(PREFIX)
-SPREFIX = $(LPREFIX)/lib
+SPREFIX = $(LPREFIX)/lib/src
 
 #### Compiler Variable Definitions ####
 CC = gcc
@@ -34,10 +34,10 @@ CFLAGS = -g -O2 -fPIC -I./ -I$(INCLDIR)
 
 #### Variable Definitions ####
 PKGNAME = KLfunc
-BASIC_FILES = Makefile Changes
+BASIC_FILES = Makefile Changes TODO
 DOCS = doc.txt init-example.txt
 VERSION = 1
-RELEASE = $(VERSION).2.3
+RELEASE = $(VERSION).2.5
 
 #### Object Definitions ####
 OBJECTS = fgauss.o fgaussS.o fmoffatS.o evalfunc.o fpolynome.o evallfunc.o \
@@ -58,16 +58,23 @@ main : $(OBJECTS)
 all : main
 
 shared : $(OBJECTS)
-	$(CC) -shared -Wl,-soname,lib$(PKGNAME).so.$(VERSION) \
-	-o lib$(PKGNAME).so.$(RELEASE) $(OBJECTS)
+	@if [[($(OS) != macosx)]]; then \
+		$(CC) -shared -Wl,-soname,lib$(PKGNAME).so.$(VERSION) \
+			-o lib$(PKGNAME).so.$(RELEASE) $(OBJECTS); \
+	else \
+		echo "Cannot build shared libraries for Mac OS X"; \
+	fi
 
-.PHONY: install intall-lib install-shared intall-src
+.PHONY: install-lib install-shared install-src
 install : install-lib
+install-all : install-lib install-shared install-src
+
 install-lib:
 	@install -d -m 0755 $(LPREFIX)/lib
 	@install -m 0644 lib$(PKGNAME).a $(LPREFIX)/lib/
 	@install -d -m 0755 $(IPREFIX)/include
 	@install -m 0644 $(HEADERS) $(IPREFIX)/include/
+	@ranlib $(LPREFIX)/lib/lib$(PKGNAME).a
 
 install-shared :
 	@install -d -m 0755 $(LPREFIX)/lib
@@ -79,9 +86,9 @@ install-shared :
 	@install -m 0644 $(HEADERS) $(IPREFIX)/include/
 
 install-src:
-	@install -d -m 0755 $(SPREFIX)/src/$(PKGNAME)
+	@install -d -m 0755 $(SPREFIX)/$(PKGNAME)
 	@install -m 0644 $(SRC) $(HEADERS) $(BASIC_FILES) $(DOCS) \
-		$(SPREFIX)/src/$(PKGNAME)/
+		$(SPREFIX)/$(PKGNAME)/
 
 package-src :
 	tar cvf lib$(PKGNAME)-$(RELEASE).tar $(BASIC_FILES) $(DOCS) \
